kubernetes/apps/avto-masini/avto-masini-web/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avto-masini-web-staging
  namespace: avto-masini
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: avto-masini-web-staging
  type: ClusterIP
