kubernetes/apps/avto-masini/avto-masini-web/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avto-masini-web-staging-ingress
  namespace: avto-masini
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SECRET_AVTO_MASINI_TUNNEL_ID}.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/hostname: "staging.${SECRET_PROD_DOMAIN}"
    # nginx.ingress.kubernetes.io/auth-url: |-
    #    http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    # nginx.ingress.kubernetes.io/auth-signin: |-
    #    https://auth.${SECRET_EXTERNAL_DOMAIN}/outpost.goauthentik.io/start?rd=$scheme%3A%2F%2F$host$escaped_request_uri
    # nginx.ingress.kubernetes.io/auth-response-headers: |-
    #    Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    # nginx.ingress.kubernetes.io/auth-snippet: |
    #    proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: traefik-avto-masini
  rules:
    - host: "staging.${SECRET_PROD_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avto-masini-web-staging
                port:
                  name: staging-svc
